asm_tests/other_testfiles/valid_files/zork.s
.name "zork"
.comment "I'M ALIIIIVE"

l2:		sti r1, %6, %1
