asm_tests/other_testfiles/invalid_files/error64.s
.name "MORO"
sti r1, r2, r3
.comment "MORJESTA!"

live %12
